<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.examples</groupId>
	<artifactId>cyclerepair</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Cycle Repair Appointment System</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<junit.version>4.13.2</junit.version>
		<assertj.swing.version>3.17.1</assertj.swing.version>
		<mockito.version>4.11.0</mockito.version>
		<mongo.driver.version>3.12.14</mongo.driver.version>
		<mongo.java.server.version>1.39.0</mongo.java.server.version>
		<testcontainers.version>1.21.4</testcontainers.version>
		<picocli.version>4.7.7</picocli.version>
		<pitest.maven.plugin.version>1.17.2</pitest.maven.plugin.version>
		<coveralls.maven.plugin.version>5.1.0</coveralls.maven.plugin.version>

		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>perkashlal</sonar.organization>
		<sonar.projectKey>perkashlal_Cycle-Appointment</sonar.projectKey>

		<sonar.issue.ignore.multicriteria>e11,e12</sonar.issue.ignore.multicriteria>
		<sonar.issue.ignore.multicriteria.e11.ruleKey>
			java:S117
		</sonar.issue.ignore.multicriteria.e11.ruleKey>
		<sonar.issue.ignore.multicriteria.e11.resourceKey>
			**/AppointmentSwingView.java
		</sonar.issue.ignore.multicriteria.e11.resourceKey>
		<sonar.issue.ignore.multicriteria.e12.ruleKey>
			java:S2699
		</sonar.issue.ignore.multicriteria.e12.ruleKey>
		<sonar.issue.ignore.multicriteria.e12.resourceKey>
			**/AppointmentSwingViewTest.java
		</sonar.issue.ignore.multicriteria.e12.resourceKey>

		<sonar.tests>
			${project.basedir}/src/test/java,
			${project.basedir}/src/it/java,
			${project.basedir}/src/e2e/java
		</sonar.tests>

		<sonar.junit.reportPaths>
			${project.build.directory}/surefire-reports,
			${project.build.directory}/failsafe-reports
		</sonar.junit.reportPaths>

		<sonar.coverage.jacoco.xmlReportPaths>
			${project.build.directory}/site/jacoco/jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>

		<sonar.coverage.exclusions>
			**/model/*.*,
			**/CycleRepairSwingApp.*
		</sonar.coverage.exclusions>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>${mongo.driver.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.13</version>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>${picocli.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-swing-junit</artifactId>
			<version>${assertj.swing.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>de.bwaldvogel</groupId>
			<artifactId>mongo-java-server</artifactId>
			<version>${mongo.java.server.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>mongodb</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>5.6.0.6792</version>
				</plugin>
				<plugin>
					<groupId>com.github.hazendaz.maven</groupId>
					<artifactId>coveralls-maven-plugin</artifactId>
					<version>${coveralls.maven.plugin.version}</version>
					<configuration>
						<repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>add-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/it/java</source>
								<source>src/e2e/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.5</version>
				<configuration>
					<systemPropertyVariables>
						<mongo.port>${mongo.mapped.port}</mongo.port>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<id>default-it</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
					<execution>
						<id>e2e-tests</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*IT.java</exclude>
							</excludes>
							<includes>
								<include>**/*E2E.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.48.1</version>
				<configuration>
					<images>
						<image>
							<name>mongo:5</name>
							<run>
								<ports>
									<port>mongo.mapped.port:27017</port>
								</ports>
							</run>
						</image>
					</images>
				</configuration>
				<executions>
					<execution>
						<id>docker-start</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>start</goal>
						</goals>
					</execution>
					<execution>
						<id>docker-stop</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jacoco</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.14</version>
						<configuration>
							<excludes>
								<exclude>**/model/*.*</exclude>
								<exclude>**/CycleRepairSwingApp.*</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>coveralls</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.14</version>
						<configuration>
							<excludes>
								<exclude>**/model/*.*</exclude>
								<exclude>**/CycleRepairSwingApp.*</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.github.hazendaz.maven</groupId>
						<artifactId>coveralls-maven-plugin</artifactId>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>pit</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<version>${pitest.maven.plugin.version}</version>
						<configuration>
							<targetClasses>
								<param>com.examples.cyclerepair.controller.*</param>
								<param>com.examples.cyclerepair.repository.mongo.*</param>
							</targetClasses>
							<targetTests>
								<param>com.examples.cyclerepair.controller.*Test</param>
								<param>com.examples.cyclerepair.repository.mongo.*Test</param>
								<param>com.examples.cyclerepair.repository.mongo.*IT</param>
							</targetTests>
							<parseSurefireConfig>false</parseSurefireConfig>
							<excludedClasses>
								<param>com.examples.cyclerepair.model.*</param>
								<param>com.examples.cyclerepair.app.swing.CycleRepairSwingApp</param>
							</excludedClasses>
							<timestampedReports>false</timestampedReports>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>mutationCoverage</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
